row gap error fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ a {
 .class-page-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    grid-auto-rows: 300px;
+    grid-auto-rows: auto;
     gap: 10px;
     width: 90%;
     margin: 20px auto;
